--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" href="./16202100231423_files/layui.css" media="all">
-  <link rel="stylesheet" href="./16202100231423_files/weui.css">
+  <link rel="stylesheet" href="./layui.css" media="all">
+  <link rel="stylesheet" href="./weui.css">
 <style>
     .weui-label{
         color:#c7bebe;
@@ -128,7 +128,7 @@
             <div class="weui-cell weui-cell_active">
             <div class="weui-cell__hd"><label class="weui-label">办结日期</label></div>
             <div class="weui-cell__bd">
-                <input id="js_input" class="weui-input" placeholder="" disabled="" value="2021-09-09 00:00:00">
+                <input id="js_input" class="weui-input" placeholder="" disabled="" value="2021-07-09 00:00:00">
             </div>
             </div>
         </div>
